--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
             </td>
         </tr>
     </tbody>
-</table><table class="mcnTextBlock" style="min-width:100%;" width="264" cellpadding="0" cellspacing="0" border="0">
+</table><table class="mcnTextBlock" width="264" cellpadding="0" cellspacing="0" border="0">
     <tbody class="mcnTextBlockOuter">
         <tr>
             <td class="mcnTextBlockInner" valign="top">
