--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
             </tbody></table>
             <table class="mcnCaptionRightTextContentContainer" width="264" cellpadding="0" cellspacing="0" align="right" border="0">
                 <tbody><tr>
-                    <td class="mcnTextContent" valign="bottom">
+                    <td class="mcnTextContent" style="padding-top:0px; padding-right: 18px; padding-bottom: 2px; padding-left: 18px;"  valign="bottom">
                         <p dir="ltr" style="line-height: 1.38; margin-top: 0pt; margin-bottom: 0pt; text-align: justify;"><strong style="background-color:transparent; color:#000000; font-family:arial; font-size:18.666666666666664px; font-style:normal; font-variant:normal; font-weight:700; text-decoration:none; vertical-align:baseline">Qué es: </strong><span style="background-color:transparent; color:#000000; font-family:arial; font-size:16px; font-style:normal; font-variant:normal; font-weight:400; text-decoration:none; vertical-align:baseline">Un equipo liderado por el doctor Katsutoshi Shirasawa del Instituto de Okinawa de Ciencia y Tecnología, creó un prototipo que es un híbrido entre “cometa” (kite) y turbina que funciona debajo del mar.</span><br>
 <strong style="background-color:transparent; color:#000000; font-family:arial; font-size:18.666666666666664px; font-style:normal; font-variant:normal; font-weight:700; text-decoration:none; vertical-align:baseline">Por qué es importante:</strong><strong> </strong><span id="docs-internal-guid-6869d1ec-f486-ddd3-e5cd-0db4d57a5fac" style="background-color:transparent; color:#000000; font-family:arial; font-size:16px; font-style:normal; font-variant:normal; font-weight:400; text-decoration:none; vertical-align:baseline">El diseño puede ser escalado a mayor </span></p>
 
@@ -611,7 +611,7 @@
                 <table style="min-width:100%;" class="mcnTextContentContainer" width="100%" cellpadding="0" cellspacing="0" align="left" border="0">
                     <tbody><tr>
                         
-                        <td class="mcnTextContent" style="padding-top:0px; padding-right: 0px; padding-bottom: 2px; padding-left: 0px;" valign="top">
+                        <td class="mcnTextContent" style="padding-top:0px; padding-right: 18px; padding-bottom: 2px; padding-left: 18px;" valign="top">
                         
                             <p dir="ltr" style="line-height: 1.38; margin-top: 0pt; margin-bottom: 0pt; text-align: justify;"><span id="docs-internal-guid-6869d1ec-f485-f64f-a44a-32d0ff5b6891" style="background-color:transparent; color:#000000; font-family:arial; font-size:16px; font-style:normal; font-variant:normal; font-weight:400; text-decoration:none; vertical-align:baseline">o menor tamaño, dependiendo de las condiciones locales y las necesidades. El doctor Shirasawa y sus colegas aspiran a montar una granja con 300 turbinas de 80 m de diámetro. Se espera que genere alrededor de 1 GW, lo equivalente a un reactor nuclear, capaz de proveer a 400,000 hogares de energía.</span></p>
 
