--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
         <tr>
             <td class="mcnTextBlockInner" valign="top">
                 
-                <table style="min-width:100%;" class="mcnTextContentContainer" width="100%" cellpadding="0" cellspacing="0" align="left" border="0">
+                <table style="min-width:100%;" class="mcnTextContentContainer" width="100%" cellpadding="0" cellspacing="0" align="center" border="0">
                     <tbody><tr>
                         
                         <td class="mcnTextContent" style="padding-top:0px; padding-right: 18px; padding-bottom: 2px; padding-left: 18px;" valign="top">
