--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
                     </td>
                 </tr>
             </tbody></table>
-            <table class="mcnCaptionRightTextContentContainer" width="264" cellpadding="0" cellspacing="0" align="right" border="0">
+            <table class="mcnCaptionRightTextContentContainer" width="100%" cellpadding="0" cellspacing="0" align="right" border="0">
                 <tbody><tr>
                     <td class="mcnTextContent" valign="top">
                     	
