--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
 </table><table class="mcnTextBlock" style="min-width:100%;" width="100%" cellpadding="0" cellspacing="0" border="0">
     <tbody class="mcnTextBlockOuter">
         <tr>
-            <td class="mcnTextBlockInner" valign="top">
+            <td class="mcnTextBlockInner" style="padding:0 9px valign="top">
                 
                 <table style="min-width:100%;" class="mcnTextContentContainer" width="100%" cellpadding="0" cellspacing="0" align="left" border="0">
                     <tbody><tr>
@@ -628,7 +628,7 @@
 </table><table class="mcnTextBlock" style="min-width:100%;" width="100%" cellpadding="0" cellspacing="0" border="0">
     <tbody class="mcnTextBlockOuter">
         <tr>
-            <td class="mcnTextBlockInner" valign="top">
+            <td class="mcnTextBlockInner" style="padding:0 9px valign="top">
                 
                 <table style="min-width:100%;" class="mcnTextContentContainer" width="100%" cellpadding="0" cellspacing="0" align="left" border="0">
                     <tbody><tr>
