--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
 
 <table class="mcnCaptionRightContentOuter" width="100%" cellpadding="0" cellspacing="0" border="0">
     <tbody><tr>
-        <td class="mcnCaptionRightContentInner" style="padding:0 9px ;" valign="top">
+        <td class="mcnCaptionRightContentInner" style="padding:0px ;" valign="top">
             <table class="mcnCaptionRightImageContentContainer" cellpadding="0" cellspacing="0" align="left" border="0">
                 <tbody><tr>
                     <td class="mcnCaptionRightImageContent" valign="top">
@@ -607,7 +607,7 @@
 </table><table class="mcnTextBlock" style="min-width:100%;" width="100%" cellpadding="0" cellspacing="0" border="0">
     <tbody class="mcnTextBlockOuter">
         <tr>
-            <td class="mcnTextBlockInner" style="padding:0 9px valign="top">
+            <td class="mcnTextBlockInner" style="padding:0px ;" valign="top">
                 
                 <table style="min-width:100%;" class="mcnTextContentContainer" width="100%" cellpadding="0" cellspacing="0" align="left" border="0">
                     <tbody><tr>
@@ -628,7 +628,7 @@
 </table><table class="mcnTextBlock" style="min-width:100%;" width="100%" cellpadding="0" cellspacing="0" border="0">
     <tbody class="mcnTextBlockOuter">
         <tr>
-            <td class="mcnTextBlockInner" style="padding:0 9px valign="top">
+            <td class="mcnTextBlockInner" style="padding:0px ;" valign="top">
                 
                 <table style="min-width:100%;" class="mcnTextContentContainer" width="100%" cellpadding="0" cellspacing="0" align="left" border="0">
                     <tbody><tr>
