--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
 </table><table class="mcnCaptionBlock" width="100%" cellpadding="0" cellspacing="0" border="0">
     <tbody class="mcnCaptionBlockOuter">
         <tr>
-            <td class="mcnCaptionBlockInner" style="padding:9px;" valign="top">
+            <td class="mcnCaptionBlockInner"  valign="top">
                 
 
 
