--- a/prueba.html
+++ b/prueba.html
@@ -12,12 +12,12 @@
 	<script>
 		var imagen=document.getElementById('imagen');
 		if(window.mobilecheck){
-			imagen.style.width="100px";
-			imagen.style.height="100px";
+			imagen.style.width="100%";
+			imagen.style.height="auto";
 		}
 		else{
-			imagen.style.width="400px";
-			imagen.style.height="400px";
+			imagen.style.width="50%";
+			imagen.style.height="auto";
 		}
 
 		window.mobilecheck = function() {
