--- a/prueba.html
+++ b/prueba.html
@@ -12,7 +12,7 @@
 	<script>
 		var imagen=document.getElementById('imagen');
 		if(window.mobilecheck){
-			imagen.style.width="10%";
+			imagen.window.width;
 			imagen.style.height="auto";
 		}
 		else{
