--- a/prueba.html
+++ b/prueba.html
@@ -12,11 +12,11 @@
 	<script>
 		var imagen=document.getElementById('imagen');
 		if(window.mobilecheck){
-			imagen.screen.width;
+			imagen.style.width="264px";
 			imagen.style.height="auto";
 		}
 		else{
-			imagen.style.width="10%";
+			imagen.style.width="400px";
 			imagen.style.height="auto";
 		}
 
