--- a/prueba.html
+++ b/prueba.html
@@ -12,12 +12,12 @@
 	<script>
 		var imagen=document.getElementById('imagen');
 		if(window.mobilecheck){
-			imagen.style.width="500px";
-			imagen.style.height="auto";
+			imagen.style.width="264px";
+			imagen.style.height="264px";
 		}
 		else{
 			imagen.style.width="400px";
-			imagen.style.height="auto";
+			imagen.style.height="400px";
 		}
 
 		window.mobilecheck = function() {
