--- a/prueba.html
+++ b/prueba.html
@@ -13,7 +13,7 @@
 		var imagen=document.getElementById('imagen');
 		if(window.mobilecheck){
 			imagen.style.width="1000px";
-			imagen.style.height="auto";
+			imagen.style.height="500px";
 		}
 		else{
 			imagen.style.width="400px";
