--- a/prueba.html
+++ b/prueba.html
@@ -19,7 +19,7 @@ height:auto;
 </style>
 </head>
 <body>
-<img id="img01" src="img_smallflower.jpg">
+<img id="img01" src="comunidad.jpg">
 
 <p style="margin-top:360px;">Resize the browser width and the background image will change at 400px.</p>
 
