--- a/prueba.html
+++ b/prueba.html
@@ -5,14 +5,14 @@
 <style>
 
 /* For width smaller than 400px: */
-#img01{
+img{
 width:100%;
 height:auto;
 }
 
 /* For width 400px and larger: */
 @media only screen and (min-width: 600px) {
-#img01{
+img{
 width:250px;
 height:auto;
 }
@@ -20,6 +20,8 @@ height:auto;
 </head>
 <body>
 <img id="img01" src="comunidad.jpg">
+<img id="01 src="comunidad.jpg">
+<img id="02" src="comunidad.jpg">
 
 <p style="margin-top:360px;">Resize the browser width and the background image will change at 400px.</p>
 
