--- a/prueba.html
+++ b/prueba.html
@@ -19,9 +19,9 @@ height:auto;
 </style>
 </head>
 <body>
-<img id="img01" src="comunidad.jpg">
-<img id="01 src="comunidad.jpg">
-<img id="02" src="comunidad.jpg">
+<img id="img01" src="comunidad.jpg"><br>
+<img id="01 src="comunidad.jpg"><br/>
+<img id="02" src="comunidad.jpg"><br/>
 
 <p style="margin-top:360px;">Resize the browser width and the background image will change at 400px.</p>
 
